--- a/Honeycomb Design File for Catan Map/Hexagon.html
+++ b/Honeycomb Design File for Catan Map/Hexagon.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <canvas id="canvasTest"></canvas>
     <script src="Hexagon.js"></script>
+    <script src="Testing.js"></script>
+    <img src='./Images/stone.png' id="stone" height="0" width="0"></img>
 </body>
 </html>
