test file stored

--- a/Honeycomb Design File for Catan Map/Hexagon.html
+++ b/Honeycomb Design File for Catan Map/Hexagon.html
@@ -12,6 +12,10 @@
     <canvas id="canvasTest"></canvas>
     <script src="Hexagon.js"></script>
     <script src="Testing.js"></script>
-    <img src='./Images/stone.png' id="stone" height="0" width="0"></img>
+    <img src='./Images/clay.png' id="clay" height="0" width="0"></img>
+    <img src='./Images/hay.png' id="hay" height="0" width="0"></img>
+    <img src='./Images/pasture.png' id="pasture" height="0" width="0"></img>
+    <img src='./Images/stone.png' id="stone" width="0" height="0"></img>
+    <img src='./Images/tree.png' id="tree" height="0" width="0"></img>
 </body>
 </html>
