new images added

--- a/Honeycomb Design File for Catan Map/Hexagon.html
+++ b/Honeycomb Design File for Catan Map/Hexagon.html
@@ -10,10 +10,10 @@
 <body>
     <canvas id="canvas"></canvas>
     <script src="Hexagon.js"></script>
-    <img src='./Images/clay.png' id="clay" height="0" width="0"></img>
-    <img src='./Images/hay.png' id="hay" height="0" width="0"></img>
-    <img src='./Images/pasture.png' id="pasture" height="0" width="0"></img>
-    <img src='./Images/stone.png' id="stone" width="0" height="0"></img>
-    <img src='./Images/tree.png' id="tree" height="0" width="0"></img>
+    <img src='./Images/Main/clay.png' id="clay" height="0" width="0"></img>
+    <img src='./Images/Main/hay.png' id="hay" height="0" width="0"></img>
+    <img src='./Images/Main/pasture.png' id="pasture" height="0" width="0"></img>
+    <img src='./Images/Main/stone.png' id="stone" width="0" height="0"></img>
+    <img src='./Images/Main/tree.png' id="tree" height="0" width="0"></img>
 </body>
 </html>
