--- a/Honeycomb Design File for Catan Map/Hexagon.html
+++ b/Honeycomb Design File for Catan Map/Hexagon.html
@@ -14,6 +14,6 @@
     <img src='./Images/Main/hay.png' id="hay" height="0" width="0"></img>
     <img src='./Images/Main/pasture.png' id="pasture" height="0" width="0"></img>
     <img src='./Images/Main/stone.png' id="stone" width="0" height="0"></img>
-    <img src='./Images/Main/tree.png' id="tree" height="0" width="0"></img>
+    <img src='./Images/Main/forest.png' id="tree" height="0" width="0"></img>
 </body>
 </html>
